cmake_minimum_required(VERSION 3.11)
project(IO C)

set(CMAKE_C_STANDARD 99)

add_executable(IO main.c )
add_executable(errno errno.c)
add_executable(myCopy myCopy.c)
add_executable(getline getline.c)
add_executable(sysCopys sysCopy.c)
add_executable(dup dup.c)
add_executable(flen flen.c)
add_executable(bigEmpytFile bigEmpytFile.c)
add_executable(getFileType getFileType.c)
add_executable(globGetFileList globGetFileList.c)
add_executable(dirAnalysis dirAnalysis.c)
add_executable(timeLog timeLog.c)
add_executable(hundredDaysLater hundredDaysLater.c)
add_executable(atexit atexit.c)
add_executable(argAnaysis argAnaysis.c)
add_executable(jmp jmp.c)